@@ -1,7 +1,7 @@
 @echo off
 
 REM  
-REM Copyright (C) 2016-2019 phantombot.tv
+REM Copyright (C) 2016-2022 phantombot.github.io/PhantomBot
 REM  
 REM This program is free software: you can redistribute it and/or modify
 REM it under the terms of the GNU General Public License as published by
@@ -17,8 +17,39 @@ REM You should have received a copy of the GNU General Public License
 REM along with this program.  If not, see <http://www.gnu.org/licenses/>.
 REM
 
+REM
+REM PhantomBot Launcher - Windows
+REM
+
+IF /I "%2" == "--df" GOTO :DELTRACK
+:CHECKONE
+IF /I "%1" == "--nowt" GOTO :LAUNCH
+
+WHERE powershell >nul 2>nul
+IF %ERRORLEVEL% NEQ 0 GOTO :LAUNCH
+
+WHERE wt >nul 2>nul
+IF %ERRORLEVEL% EQU 0 GOTO :SWITCHTOWT
+
+GOTO :LAUNCH
+
+:DELTRACK
+del /q /f .\config\wtcheck.txt > NUL
+GOTO :CHECKONE
+
+:LAUNCH
 setlocal enableextensions enabledelayedexpansion
 cd %~dp0
-".\java-runtime\bin\java" --add-opens java.base/java.lang=ALL-UNNAMED -Djava.security.policy=config/security -Dinteractive -Xms1m -Dfile.encoding=UTF-8 -jar "PhantomBot.jar" %1
+".\java-runtime\bin\java" --add-exports java.base/sun.security.x509=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED -Duser.language=en -Djava.security.policy=config/security -Dinteractive -Xms1m -Dfile.encoding=UTF-8 -jar "PhantomBot.jar" %*
 endlocal
 pause
+
+GOTO :EOF
+
+:SWITCHTOWT
+setlocal enableextensions enabledelayedexpansion
+copy /y NUL .\config\wtcheck.txt > NUL
+wt nt --profile "Command Prompt" --startingDirectory "%~dp0\" --title PhantomBot launch.bat --nowt --df %*
+timeout /t 5 /nobreak > NUL
+IF EXIST .\config\wtcheck.txt GOTO :LAUNCH
+endlocal
